{{$NEXT}}

 - Config option 'basedir' is mandatory now.
   Change your directory structure to this values befor upgrading:
   - netspocdir      => ${basedir}/policies,
   - lockfiledir     => ${basedir}/lock
   - historydir      => ${basedir}/history
   - statusdir       => ${basedir}/status
   - aaa_credentials => ${basedir}/credentials

3.036     2024-10-30 17:20:21+01:00 Europe/Berlin

 - Fixed command 'newpolicy.pl' to be compatible with new config
   option 'basedir'.
 - Option 'basedir' will become mandatory in next version of this software
   and not in this version as announced previously.

3.035     2024-10-28 12:06:44+01:00 Europe/Berlin

 - Added new config option 'basedir'. If this option is given,
   default values are used for these old options:
   - netspocdir      => ${basedir}/policies,
   - lockfiledir     => ${basedir}/lock
   - historydir      => ${basedir}/history
   - statusdir       => ${basedir}/status
   - aaa_credentials => ${basedir}/credentials
   These old options will be no longer valid in next version of this software.
 - Changed format of status file for command 'missing-approve' to JSON.
 - Fixed URL for committing changes to device of type PAN-OS.
   Previously the URL looked like
   https://address/api/?key=xxx&https://address/api/?key=xxx&type=commit

3.034     2024-10-04 10:26:33+02:00 Europe/Berlin

 - For device of type ASA that has interface not known by Netspoc,
   ACL of this interface is no longer removed during approve.
 - Migrated program 'approve.pl' from Perl to Go as 'do-approve'.
 - Migrated program 'missing-approve' from shell script to Go.
 - Program 'diamonds' is no longer a manually installed executable
   with SUID bit set, but a shell script calling 'sudo'.
 - Program 'newpolicy' no longer calls 'suid-newpolicy' but 'sudo-newpolicy'
   which is a shell script calling 'sudo'.
 - Modified error message for failed login.
   Option '--brief' of command 'do-approve' now only suppresses