@@ -5,8 +5,6 @@ copyright_holder = Heinz Knutzen
 abstract = Transfer configuration generated by Netspoc to device.
 
 [Encoding]
- emcoding = utf8
- filenames = bin/newpolicy.pl
  encoding = bytes
  match = ^bin/
  match = ^go/
